项目初始化

--- a/package.json
+++ b/package.json
@@ -9,9 +9,7 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "devDependencies": {
-    "vite": "^4.4.11"
-  },
+  "devDependencies": {},
   "dependencies": {
     "three": "^0.157.0"
   }
