--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "devDependencies": {},
   "dependencies": {
+    "dat.gui": "^0.7.9",
     "gsap": "^3.12.2",
     "three": "^0.157.0"
   }
