--- a/demo10/package.json
+++ b/demo10/package.json
@@ -2,7 +2,7 @@
   "name": "demo10",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "serve": "vite"
   },
